--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ output:
 description: |
   Семинарские занятия по статистике
 link-citations: yes
-github-repo: elenary/AStatsForDA
+github-repo: elenary/StatsForDA
 ---
 
 ```{r, eval=TRUE,echo=FALSE}
@@ -21,6 +21,7 @@ library(kableExtra)
 ```
 
 ```{r opts, echo = FALSE}
+# knitr::opts_knit$set(root.dir = 'docs/')
 knitr::opts_chunk$set(fig.path = "images/")
 ```
 
