--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,3 @@
----
 title: "Статистика для анализа данных"
 author: "Елена Рыбина"
 date: "`r Sys.Date()`"
@@ -7,30 +6,32 @@ documentclass: book
 output:
   bookdown::gitbook: default
   #bookdown::pdf_book: default
+bibliography: [book.bib, packages.bib]
 description: |
   Семинарские занятия по статистике
 link-citations: yes
 github-repo: elenary/StatsForDA
 ---
 
-```{r, eval=TRUE,echo=FALSE}
-library(tidyverse)
-# library(viridis)
-library(knitr)
-library(kableExtra)
-```
-
-```{r opts, echo = FALSE}
-# knitr::opts_knit$set(root.dir = 'docs/')
-knitr::opts_chunk$set(fig.path = "images/")
-```
-
 # Статистика и ее место в жизни
 
-Hi.
+This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
 
-Bye.
+The **bookdown** package can be installed from CRAN or Github:
 
-# Статистика и ее место в жизни
+```{r eval=FALSE}
+install.packages("bookdown")
+# or the development version
+# devtools::install_github("rstudio/bookdown")
+```
 
-<!-- If you need PDF output, uncomment bookdown::pdf_book above in YAML. You will need a LaTeX installation, e.g., https://yihui.name/tinytex/ -->
+Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
+
+To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.name/tinytex/>.
+
+```{r include=FALSE}
+# automatically create a bib database for R packages
+knitr::write_bib(c(
+  .packages(), 'bookdown', 'knitr', 'rmarkdown'
+), 'packages.bib')
+```
