final for 1 theme

--- a/index.Rmd
+++ b/index.Rmd
@@ -46,31 +46,30 @@ knitr::include_graphics("docs/klark-95cl.jpg")
 
 ##  Определение статистики
 
+> Статистика — это набор математических процедур, которые необходимы для организации, обобщения и интерпретации информации.
+> `r tufte::quote_footer('--- Онлайн-курс по статистике')`
+
 > Стати́стика — отрасль знаний, наука, в которой излагаются общие вопросы сбора, измерения, мониторинга, анализа массовых статистических (количественных или качественных) данных и их сравнение; изучение количественной стороны массовых общественных явлений в числовой форме
-> `r tufte::quote_footer('--- Википедия / Маля советская энциклопедия')`
+> `r tufte::quote_footer('--- Википедия / Малая советская энциклопедия')`
 
 > "Статистика – это раздел математики, изучающий описание наблюдаемых (на-пример в экспериментах) данных с помощью набора обобщенных параметров (таких как среднее значение) и ищущая закономерности связи между исходными данными и этими параметрами".
-> `r tufte::quote_footer('--- Книга "Статистика в рисунках')`
+> `r tufte::quote_footer('--- Книга "Статистика в рисунках"')`
 
 > Статистика – набор обобщенных вычисляемых характеристик, полученных при обработке параметров данных, которые являются объектом анализа. Слово используется также и в смысле раздела математики или отдельной науки – математической статистики.
-> `r tufte::quote_footer('--- Книга "Статистика в рисунках')`
+> `r tufte::quote_footer('--- Книга "Статистика в рисунках"')`
 
 > Статистика – или математическая статистика, раздел математики, в которой систематизированы методы определения особенностей совокупностей, которые являются объектами исследования, и включающая описательную статистику и статистический вывод.
 > `r tufte::quote_footer('--- Книга "Статистика в рисунках')`
 
 ###  Применение статистики
 
-Где применяется:
+Вопрос, в которых точно не обходится без статистики:
 
 * Сколько человек живут у нас в стране?
 * Дадут ли мне кредит?
 * Сколько денег платить сотрудникам? А если сотрудник работает уже 5 лет? А 10?
 * Что, прости господи, происходит с коронавирусом?
 * Если я провела исследование, как понять, можно ли верить его результатам?
-
-
-* игра *
-
 
 **Можно выделить несколько самых выжных задач статистики:**
 
@@ -92,7 +91,7 @@ digraph {
   graph []
   node [shape = plaintext, fontsize = 10]
     A [label = 'Статистика']
-    B [label = 'Опистальная статистика']
+    B [label = 'Описательная статистика']
     C [label = 'Статистика вывода']
   edge []
     A->B
@@ -109,12 +108,12 @@ digraph {
 ```{r echo= FALSE, fig.align = 'center', out.width="100%"}
 knitr::include_graphics("docs/sample.png")
 ```
-Собственно, за это и отвечает математика и теория вероятностей, заложенные внутрь статистических тестов. Мы предполагаем, что люди, участвующие в нашем исследовании – рандомные представители генеральной совокупности (ха-ха, так, конечно, никогда не бывает, но воообще важно, чтобы то, что мы исследуем только русскоязычных людей или студентов психфака не влияло на нашу зависимую переменную). И когда мы применяем статистический метод, мы оцениваем, какова вероятность, при условии, что мы выбрали случайных людей, получить такие результаты о связи НП и ЗП во всей генеральной совокупности?
+Собственно, за это и отвечает математика и теория вероятностей, заложенные внутрь статистических тестов. Мы оцениваем, каковы вероятности сделать неправильный вывод (ложноположительный -- в сторону наличия какого-либо эффекта, когда на самом деле его нет, или ложноотрицательный -- в сторону отсутствия какого-либо эффекта, когда он на самом деле есть), оцениваем полученные результаты статистического теста, и, учитывая, что выборка была подробрана случайным образом, делаем вывод, какова вероятность получить такие же результаты на всей генеральной совокупности.  Мы предполагаем, что люди, участвующие в нашем исследовании – рандомные представители генеральной совокупности *(ха-ха, так, конечно, почти никогда не бывает, и нам по-хорошему надо уточнить, что мы делаем вывод, например, только о русскоязычных людях или студентах психфака)*. И когда мы применяем статистический метод, мы оцениваем, какова вероятность, при условии, что мы выбрали случайных людей, получить такие результаты во всей генеральной совокупности?
 
 Важное понятие --  **репрезентативность выборки**. Она достигается:
 
-* Случайным выбором людей (берем не каких-то конкретных, которые нам больше нравятся)
-* Объемом выборки.
+* **Случайным выбором людей** (берем не каких-то конкретных, которые нам больше нравятся, а случайным образом)
+* **Объемом выборки** (доказано, что при большом объеме выборке прооявляется влияение факторов на случайные величины, об этом поговорим подробнее)
 
 
 <!--chapter:end:index.Rmd-->
