--- a/index.Rmd
+++ b/index.Rmd
@@ -74,16 +74,16 @@ knitr::include_graphics("docs/klark-95cl.jpg")
 **Можно выделить несколько самых выжных задач статистики:**
 
 * Описать существующую реальность
-* Сделать вывод о причинах события или связях с ним
-* Предсказать вероятность наступления какого-либо события
+* Выявить закономерности: связи неких событий между собой или причины событий
+* Предсказать и оценить вероятность наступления какого-либо события
 
 ##  Виды статистики
 
-Представим, что мы провели исследование. Как ведут себя собранные данные? Что это за данные: они непрерывные или там много отдельных значений? Каковы максимальные и миниамальные значения? А самые встречающиеся? Какова вообще встречаемость разных значений?
+Представим, что мы провели исследование, например, о влиянии кофеина на внимание или использования нового инструмента рабочей коммуникации на продуктивность сотрудников. Прежде, чем делать вывод о том, как кофеин повлиял на способность сохранять внимание или о том, что новый инструмент повысил продуктивность сотрудников, нам хорошо бы сначала понять, что за данные у нас, можно ли им доверять? Как в целом они себя ведут, получились непрерывные значения, или там есть какие-то провалы? Каковы максимальные и минимальные значения, они соотноосятся с нашими представлениями о реальности? А какие самые встречающиеся? Какова вообще встречаемость разных значений? Ответы на эти вопросы позволяют нам поисследовать полученные данные и на начальном этапе проверить, не допустили ли мы какой-либо ошибки в данных, и первично оценить наши шансы на проверку предположения.
 
 Такое описание данных называется **описательной статистикой (descipritve stats)**, потому что, как уже понятно из названия, описывает наши данные. Здесь мы можем получить сведения о характере данных, "пощупать" их, понять что-то -- но не делаем выводы относительного того, *влияет ли на эти данные какой-либо параметр или связано ли изменение данных с каким-либо параметром.*
 
-Другой раздел статистики -- **статистикой вывода (inferential stats)**, где мы уже целенаправленно хотим сделать вывод относительно выдвинутых предположений, например, сравнить две групп по какому-либо параметру. Например, можем предположить, что студенты в разных городах имеют разную успеваемость по одному и тому же предмету, или что количество сна влияет на способность концентрироваться во время пары.
+После того, как мы поисследовали данные и признали их адекватными и пригодными для работы, мы можем использовать их для выводов относительно выдвинутых предположений. Что там все-таки прооисходит с кофеином, он увеличил способность концентрироваться и сохранять внимание, или, наоборот, ухудшил? А с введением нового способа коммуникации между сотрудниками, стали ли они после этого делать больше задач, или все осталось на прежнем уровне? Чтобы ответить на эти вопросы, нам нужно *сравнить данные и оценить различия между ними*. Этим занимается другой раздел статистики -- **статистикой вывода (inferential stats)**. Здесь уже мы не занимаемся описанием данных, а непосредственно делаем выводы их них, о связи переменных между собой или о влиянии одной переменной на другую. Например, если мы правильно провели статистический анализ *(а это не такая тривиальная задача -- спойлер, большинство выводов, которые делаются на основании данных, ложные)*, то сможем заключить, что пить много кофе может, наоборот, негативно влиять на внимание, а использовать новый инструмент, где писать сообщения просто, быстро, и можно добавлять разные эмодзи -- способствует увеличению сделанных сотрудниками задач. И можем даже предсказать, насколько больше задач будут делаться в таком случае.
 
 ```{r echo = FALSE, out.width="100%"}
 DiagrammeR::grViz("
@@ -101,20 +101,87 @@ digraph {
 ```
 
 
-## Выборка
+# Выборка
 
-Допустим, нас есть какое-то предположение о связи неких психологических конструктов относительно того, как работает психика у людей (теоретическая гипотеза). Мы придумываем дизайн исследования и уточняем гипотезу на языке исследования, делаем ее более конкретной. Далее проводим исследование и собираем данные на нашей выборке, часто не очень большой (обычно размер выборки варьируется от 30 до 100 человек, подробнее обсудим при рассмотрении статистической мощности). Проводим расчет статистического метода и делаем вывод по эмпирической гипотезе о связи наших конструктов, в том смысле, в котором мы их операционализировали. И когда мы делаем выводы, мы говорим не о нашей небольшой группе людей, которых мы исследовали – а о всей популяции людей, она называется **генеральной совокупностью**. Почему так можно?
+<!-- Допустим, нас есть какое-то предположение о связи неких психологических конструктов относительно того, как работает психика у людей. Например, о том, что кофеин как-то влияет на такой конструкт, как внимание -- это наша **теоретическая гипотеза**. Чтобы ее проверить, нам нужно провести исследование и уточнить гипотезу на языке этого исследования, сделать ее более конкретной. Например, мы решили провести эксперимент, в котором экспериментальная группа пила 3 кружки кофе в первой половине дня, а контрольная группа пила декофеинизированный кофе. Далее мы делали несколько замеров решения какого-нибудь когнитивного теста на внимание во второй половине дня и смотрели, сколько ошибок допускают экспериментальной и контрольной выборок. десь мы уточнили. И когда мы делаем выводы, мы говорим не о нашей небольшой группе людей, которых мы исследовали – а о всей популяции людей, она называется **генеральной совокупностью**. Почему так можно? -->
 
-```{r echo= FALSE, fig.align = 'center', out.width="100%"}
+Мы рассмотрели два примера -- о влиянии кофеина на внимание и коммуникационного рабочего инструмента на продуктивность. В этих примерах мы предположили, что провели исследование -- то есть набрали какое-то количество человек и сделали вывод, как в целом это работает у людей. Почему так происходит? Почему мы можем сделать вывод о всех людях, которые пьют кофе или пользуются этим инструментом? И зачем нам вообще это нужно?
+
+<p align="center">
+```{r echo= FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/sample.png")
 ```
-Собственно, за это и отвечает математика и теория вероятностей, заложенные внутрь статистических тестов. Мы оцениваем, каковы вероятности сделать неправильный вывод (ложноположительный -- в сторону наличия какого-либо эффекта, когда на самом деле его нет, или ложноотрицательный -- в сторону отсутствия какого-либо эффекта, когда он на самом деле есть), оцениваем полученные результаты статистического теста, и, учитывая, что выборка была подробрана случайным образом, делаем вывод, какова вероятность получить такие же результаты на всей генеральной совокупности.  Мы предполагаем, что люди, участвующие в нашем исследовании – рандомные представители генеральной совокупности *(ха-ха, так, конечно, почти никогда не бывает, и нам по-хорошему надо уточнить, что мы делаем вывод, например, только о русскоязычных людях или студентах психфака)*. И когда мы применяем статистический метод, мы оцениваем, какова вероятность, при условии, что мы выбрали случайных людей, получить такие результаты во всей генеральной совокупности?
+*Изображение с https://towardsdatascience.com/*
+</p>
 
-Важное понятие --  **репрезентативность выборки**. Она достигается:
+## Выборочные оценки
+
+Как мы можем сделать вывод о всех людях в целом? Если мы хотим узнать средний рост людей на всей планете, будем ли мы измерять каждого человека и брать среднее арифметическое?
+
+
+<p align="center">
+```{r echo= FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/height_distribution.png")
+```
+https://ourworldindata.org/human-height 
+</p>
+
+**Генеральная совокупность** -- множество (или совокупность) всех изучаемых объектов в рамках определенного исследовательского вопроса.
+
+**Выборка** или **выборочная совокупность** -- часть генеральной совокупности, отобранная для изучения определенного исследовательского вопроса.
+
+Когда мы говорим о генеральной совокупности, мы говорим о ее **параметрах**, например, средний рост людей, обозначим его **X**. Мы не можем посчитать его напрямую, поэтому нам приходится прибегать к **выборочным оценкам**, которые часто обозначются той же буквой, что и параметр генеральной совокупности, только "с крышечкой" или "с чертой" **X̅** -- выборочное среднее, средний рост людей на конкретной выборке.
+
+.        | Генеральная совокупность | Выборка 
+---------| ------------------------ | -------
+Размер   | N                        | n
+Параметр | X                        | X̅
+
+Итак, когда мы хотим сделать вывод о всех людях из генеральной совокупности -- мы проводим исследование на небольшой выборке (в зависимости от метоода исследования необходимый размер выборки может быть от 10 до 1000 чловек) и оцениваем исследуемый параметр генеральной совокупности по выборочным оценкам. 
+
+
+### Репрезентативность выборки
+
+Важным понятием является  **репрезентативность выборки** -- способность выборки отражать исследуемый параметр генеральной совокупности. 
+
+*Одна и та же выборка может быть репрезентативной для одного исследовательского вопроса и не репрезентативной для другого!*
+
+Репрезентативность достигается:
 
 * **Случайным выбором людей** (берем не каких-то конкретных, которые нам больше нравятся, а случайным образом)
-* **Объемом выборки** (доказано, что при большом объеме выборке прооявляется влияение факторов на случайные величины, об этом поговорим подробнее)
+* **Объемом выборки** (доказано, что при большом объеме выборки она достаточно представляет генеральную совокупность, чтобы дать ответ об исследуемом параметре)
 
+**Способы формирования репрезентативных выборок**
+
+*  Простая случайная выборка (simple random samplle)
+*  Систематическая выборка (systematic sample)
+*  Кластерная выборка (cluster sample)
+*  Стратифицированная выборка (stratified sample)
+
+
+**Кейс**
+
+*Некий Никита провел исследование, где они изучал взаимосвязь возраста, времени работы на одном месте и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита давал опросник выгорания Маслач (Maslach Burnout Inventory, MBI) преподавателям департаментов психологии. На основании обработанных данных Никита сделал следующие выводы: 1) выгорание очень распространено в преподавательской среде России; 2) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?*
+
+```{r echo= FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
+```
+
+# Типы шкал
+
+
+Шкала | Описание                                       | Возможные операции | Примеры              | 
+------| -----------------------------------------------| ------------------ | -------------------- | 
+**Наименований (номинальная)** | Качественная (категориальная), нельзя установить "больше" или "меньше" | =, $\neq$ | shcool, sex, address, famsize, Mjob, Fjob, schoolsup | 
+**Порядка (ранговая)**         | Качественная (категориальная), можно установить "больше" или "меньше", но нельзя посчитать количественно, на сколько больше или меньше | =, $\neq$, >, < | Medu, Fedu, traveltime, studytime, famrel, freetime, goout, Dalc, Walc, health | 
+**Разности (интервальная)**    | Количественная, но нет абсоолютного нуля, можно посчитать  *на сколько* больше или меньше, но нельзя посчитать, *во сколько раз* | =, $\neq$, >, <, +, - | G *(отнесу сюда, так как с оценками все сложно)*  | 
+**Отношений (абсолютная)**     | Количественная, есть абсолютный ноль, можно посчитать и *на сколько* больше или меньше, и *во сколько раз* | =, $\neq$, >, <, +, -, ×, ÷ | age, failures, absences | 
+
+Опишем переменные для гипотезы 1. Возраст (age) -- это количественная переменная, в целом про возраст мы можем сказать, что он непрерывен (здесь возраст округлен до целых, поэтому на которотком промежутке возрастов это может сыграть роль) Чуть позже посмотрим на переменную возраста в описательных статистиках, чтобы убедиться, что можем работать с ней как с непрерывной переменной. У возраста есть абсолютный ноль (нельзя быть возраста "-10 лет"), можем сказать, что человек возраста 30 лет в два раза старше человека возраста 15 лет, поэтому возраст относится к шкале отношений.
+
+Walc -- явно относится к порядковой шкале: можем сказать, что студенты, ответившие "4" на вопрос про употребление алкоголя, употребляют его больше, чем те, кто выбрал "2", но не можем сказать, что в количестве выпитого алкоголя эта разница выражается как в два раза больше.
+
+*К каким шкалам относятся переменные для гипотезы 2 и гипотезы 3?*
 
 <!--chapter:end:index.Rmd-->
 
