--- a/index.Rmd
+++ b/index.Rmd
@@ -132,10 +132,10 @@ https://ourworldindata.org/human-height
 
 Когда мы говорим о генеральной совокупности, мы говорим о ее **параметрах**, например, средний рост людей, обозначим его **X**. Мы не можем посчитать его напрямую, поэтому нам приходится прибегать к **выборочным оценкам**, которые часто обозначются той же буквой, что и параметр генеральной совокупности, только "с крышечкой" или "с чертой" **X̅** -- выборочное среднее, средний рост людей на конкретной выборке.
 
-.        | Генеральная совокупность | Выборка 
----------| ------------------------ | -------
-Размер   | N                        | n
-Параметр | X                        | X̅
+.        | Генеральная совокупность | Выборка |
+---------| ------------------------ | --------|
+Размер   | N                        | n       |
+Параметр | X                        | X̅       |
 
 Итак, когда мы хотим сделать вывод о всех людях из генеральной совокупности -- мы проводим исследование на небольшой выборке (в зависимости от метоода исследования необходимый размер выборки может быть от 10 до 1000 чловек) и оцениваем исследуемый параметр генеральной совокупности по выборочным оценкам. 
 
@@ -167,7 +167,7 @@ https://ourworldindata.org/human-height
 knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
 ```
 
-# Типы шкал
+# Данные и типы шкал
 
 
 Шкала | Описание                                       | Возможные операции | Примеры              | 
