--- a/index.Rmd
+++ b/index.Rmd
@@ -82,9 +82,6 @@ knitr::include_graphics("docs/klark-95cl.jpg")
 Представим, что мы провели исследование, например, о влиянии кофеина на внимание или использования нового инструмента рабочей коммуникации на продуктивность сотрудников. Прежде, чем делать вывод о том, как кофеин повлиял на способность сохранять внимание или о том, что новый инструмент повысил продуктивность сотрудников, нам хорошо бы сначала понять, что за данные у нас, можно ли им доверять? Как в целом они себя ведут, получились непрерывные значения, или там есть какие-то провалы? Каковы максимальные и минимальные значения, они соотноосятся с нашими представлениями о реальности? А какие самые встречающиеся? Какова вообще встречаемость разных значений? Ответы на эти вопросы позволяют нам поисследовать полученные данные и на начальном этапе проверить, не допустили ли мы какой-либо ошибки в данных, и первично оценить наши шансы на проверку предположения.
 
 Такое описание данных называется **описательной статистикой (descipritve stats)**, потому что, как уже понятно из названия, описывает наши данные. Здесь мы можем получить сведения о характере данных, "пощупать" их, понять что-то -- но не делаем выводы относительного того, *влияет ли на эти данные какой-либо параметр или связано ли изменение данных с каким-либо параметром.*
-
-После того, как мы поисследовали данные и признали их адекватными и пригодными для работы, мы можем использовать их для выводов относительно выдвинутых предположений. Что там все-таки прооисходит с кофеином, он увеличил способность концентрироваться и сохранять внимание, или, наоборот, ухудшил? А с введением нового способа коммуникации между сотрудниками, стали ли они после этого делать больше задач, или все осталось на прежнем уровне? Чтобы ответить на эти вопросы, нам нужно *сравнить данные и оценить различия между ними*. Этим занимается другой раздел статистики -- **статистикой вывода (inferential stats)**. Здесь уже мы не занимаемся описанием данных, а непосредственно делаем выводы их них, о связи переменных между собой или о влиянии одной переменной на другую. Например, если мы правильно провели статистический анализ *(а это не такая тривиальная задача -- спойлер, большинство выводов, которые делаются на основании данных, ложные)*, то сможем заключить, что пить много кофе может, наоборот, негативно влиять на внимание, а использовать новый инструмент, где писать сообщения просто, быстро, и можно добавлять разные эмодзи -- способствует увеличению сделанных сотрудниками задач. И можем даже предсказать, насколько больше задач будут делаться в таком случае.
-
 ```{r echo = FALSE, out.width="100%"}
 DiagrammeR::grViz("
 digraph {
@@ -99,6 +96,9 @@ digraph {
 }
 ")
 ```
+После того, как мы поисследовали данные и признали их адекватными и пригодными для работы, мы можем использовать их для выводов относительно выдвинутых предположений. Что там все-таки прооисходит с кофеином, он увеличил способность концентрироваться и сохранять внимание, или, наоборот, ухудшил? А с введением нового способа коммуникации между сотрудниками, стали ли они после этого делать больше задач, или все осталось на прежнем уровне? Чтобы ответить на эти вопросы, нам нужно *сравнить данные и оценить различия между ними*. Этим занимается другой раздел статистики -- **статистикой вывода (inferential stats)**. Здесь уже мы не занимаемся описанием данных, а непосредственно делаем выводы их них, о связи переменных между собой или о влиянии одной переменной на другую. Например, если мы правильно провели статистический анализ *(а это не такая тривиальная задача -- спойлер, большинство выводов, которые делаются на основании данных, ложные)*, то сможем заключить, что пить много кофе может, наоборот, негативно влиять на внимание, а использовать новый инструмент, где писать сообщения просто, быстро, и можно добавлять разные эмодзи -- способствует увеличению сделанных сотрудниками задач. И можем даже предсказать, насколько больше задач будут делаться в таком случае.
+
+
 
 
 # Выборка
@@ -126,6 +126,7 @@ knitr::include_graphics("docs/height_distribution.png")
 https://ourworldindata.org/human-height 
 </p>
 
+
 **Генеральная совокупность** -- множество (или совокупность) всех изучаемых объектов в рамках определенного исследовательского вопроса.
 
 **Выборка** или **выборочная совокупность** -- часть генеральной совокупности, отобранная для изучения определенного исследовательского вопроса.
@@ -133,14 +134,14 @@ https://ourworldindata.org/human-height
 Когда мы говорим о генеральной совокупности, мы говорим о ее **параметрах**, например, средний рост людей, обозначим его **X**. Мы не можем посчитать его напрямую, поэтому нам приходится прибегать к **выборочным оценкам**, которые часто обозначются той же буквой, что и параметр генеральной совокупности, только "с крышечкой" или "с чертой" **X̅** -- выборочное среднее, средний рост людей на конкретной выборке.
 
 .        | Генеральная совокупность | Выборка |
----------| ------------------------ | --------|
-Размер   | N                        | n       |
-Параметр | X                        | X̅       |
+-------- | ------------------------ | ------- |
+Размер   |               N          |    n    |
+Параметр |               X          |    X    |
 
 Итак, когда мы хотим сделать вывод о всех людях из генеральной совокупности -- мы проводим исследование на небольшой выборке (в зависимости от метоода исследования необходимый размер выборки может быть от 10 до 1000 чловек) и оцениваем исследуемый параметр генеральной совокупности по выборочным оценкам. 
 
 
-### Репрезентативность выборки
+## Репрезентативность выборки
 
 Важным понятием является  **репрезентативность выборки** -- способность выборки отражать исследуемый параметр генеральной совокупности. 
 
@@ -161,7 +162,7 @@ https://ourworldindata.org/human-height
 
 **Кейс**
 
-*Некий Никита провел исследование, где они изучал взаимосвязь возраста, времени работы на одном месте и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита давал опросник выгорания Маслач (Maslach Burnout Inventory, MBI) преподавателям департаментов психологии. На основании обработанных данных Никита сделал следующие выводы: 1) выгорание очень распространено в преподавательской среде России; 2) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?*
+> Некий Никита провел исследование, где они изучал взаимосвязь возраста, времени работы на одном месте и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита давал опросник выгорания Маслач (Maslach Burnout Inventory, MBI) преподавателям департаментов психологии. На основании обработанных данных Никита сделал следующие выводы: 1) выгорание очень распространено в преподавательской среде России; 2) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?
 
 ```{r echo= FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
