--- a/index.Rmd
+++ b/index.Rmd
@@ -162,7 +162,7 @@ https://ourworldindata.org/human-height
 
 **Кейс**
 
-> Некий Никита провел исследование, где они изучал взаимосвязь возраста, времени работы на одном месте и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита давал опросник выгорания Маслач (Maslach Burnout Inventory, MBI) преподавателям департаментов психологии. На основании обработанных данных Никита сделал следующие выводы: 1) выгорание очень распространено в преподавательской среде России; 2) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?
+> Некий Никита провел исследование, где они изучал взаимосвязь возраста, преподавательского стажа и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита нашел по 10 преподавателей департаметов психологии из каждого вуза в социальной сети ВКонтакте и предлагал им заполнить опросник выгорания Маслач (Maslach Burnout Inventory, MBI). На основании обработанных данных Никита сделал следующие выводы: 1) в России чаще выгорают преподаватели более молодого возраста; 2) чаще выгорают преподаватели с меньшим преподавательским стажем; 3) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?
 
 ```{r echo= FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
@@ -171,18 +171,7 @@ knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
 # Данные и типы шкал
 
 
-Шкала | Описание                                       | Возможные операции | Примеры              | 
-------| -----------------------------------------------| ------------------ | -------------------- | 
-**Наименований (номинальная)** | Качественная (категориальная), нельзя установить "больше" или "меньше" | =, $\neq$ | shcool, sex, address, famsize, Mjob, Fjob, schoolsup | 
-**Порядка (ранговая)**         | Качественная (категориальная), можно установить "больше" или "меньше", но нельзя посчитать количественно, на сколько больше или меньше | =, $\neq$, >, < | Medu, Fedu, traveltime, studytime, famrel, freetime, goout, Dalc, Walc, health | 
-**Разности (интервальная)**    | Количественная, но нет абсоолютного нуля, можно посчитать  *на сколько* больше или меньше, но нельзя посчитать, *во сколько раз* | =, $\neq$, >, <, +, - | G *(отнесу сюда, так как с оценками все сложно)*  | 
-**Отношений (абсолютная)**     | Количественная, есть абсолютный ноль, можно посчитать и *на сколько* больше или меньше, и *во сколько раз* | =, $\neq$, >, <, +, -, ×, ÷ | age, failures, absences | 
 
-Опишем переменные для гипотезы 1. Возраст (age) -- это количественная переменная, в целом про возраст мы можем сказать, что он непрерывен (здесь возраст округлен до целых, поэтому на которотком промежутке возрастов это может сыграть роль) Чуть позже посмотрим на переменную возраста в описательных статистиках, чтобы убедиться, что можем работать с ней как с непрерывной переменной. У возраста есть абсолютный ноль (нельзя быть возраста "-10 лет"), можем сказать, что человек возраста 30 лет в два раза старше человека возраста 15 лет, поэтому возраст относится к шкале отношений.
-
-Walc -- явно относится к порядковой шкале: можем сказать, что студенты, ответившие "4" на вопрос про употребление алкоголя, употребляют его больше, чем те, кто выбрал "2", но не можем сказать, что в количестве выпитого алкоголя эта разница выражается как в два раза больше.
-
-*К каким шкалам относятся переменные для гипотезы 2 и гипотезы 3?*
 
 <!--chapter:end:index.Rmd-->
 
