--- a/index.Rmd
+++ b/index.Rmd
@@ -14,6 +14,11 @@ link-citations: yes
 github-repo: elenary/StatsForDA
 ---
 
+```{r, eval=TRUE,echo=FALSE}
+library(tidyverse)
+library(kableExtra)
+```
+
 # Статистика и ее место в жизни
 
 ## Вероятности, формулировки и выводы
@@ -170,7 +175,37 @@ knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
 
 # Данные и типы шкал
 
+Что значит измерить что-либо? Это значит, **привести в соответствие исследуемому параметру какое-либо значение на шкале**.
 
+**Шкала** -- это система измерения. Для того, чтобы мы все могли пользоваться одинаковыми единицами измерениями и не сходили с ума, мы, люди планеты Земля, пользуемся едиными шкалами. Всего их 4, и они бывают метрические и неметрические -- то есть, можем ли мы приложить измерительную линейку к ним или нет. Данные, измеренные метрическими шкалами -- количественные данные.
+
+
+## Количественные и неколичественные данные
+
+## Непрерывные и дискретные данные
+
+## Типы шкал данных
+
+Шкала | Описание                                       | Возможные операции | Примеры              | 
+------| -----------------------------------------------| ------------------ | -------------------- | 
+**Наименований (номинальная)** | Качественная (категориальная), нельзя установить "больше" или "меньше" | =, $\neq$ | shcool, sex, address, famsize, Mjob, Fjob, schoolsup | 
+**Порядка (ранговая)**         | Качественная (категориальная), можно установить "больше" или "меньше", но нельзя посчитать количественно, на сколько больше или меньше | =, $\neq$, >, < | Medu, Fedu, traveltime, studytime, famrel, freetime, goout, Dalc, Walc, health | 
+**Разности (интервальная)**    | Количественная, но нет абсоолютного нуля, можно посчитать  *на сколько* больше или меньше, но нельзя посчитать, *во сколько раз* | =, $\neq$, >, <, +, - | G *(отнесу сюда, так как с оценками все сложно)*  | 
+**Отношений (абсолютная)**     | Количественная, есть абсолютный ноль, можно посчитать и *на сколько* больше или меньше, и *во сколько раз* | =, $\neq$, >, <, +, -, ×, ÷ | age, failures, absences | 
+
+
+
+```{r, eval=TRUE, message = FALSE}
+library(tidyverse)
+teacher <- seq(1,30,1)
+age <-  rep(c(27, 30, 32, 26, 27, 41),5)
+exp <- rep(c("от 1 до 2", "от 1 до 2", "от 3 до 5", "от 3 до 5", "от 1 до 2", "больше 5"),5)
+univer <-  rep(c("MSU", "HSE", "MSU", "RANEPA", "HSE", "RANEPA"),5)
+
+burnout <- tibble(teacher, age, exp, univer)
+
+kable(burnout) %>% scroll_box(width = "100%")
+```
 
 
 <!--chapter:end:index.Rmd-->
