--- a/index.Rmd
+++ b/index.Rmd
@@ -4,12 +4,11 @@ author: "Елена Рыбина"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-# output:
-#   bookdown::gitbook: default
-  #bookdown::pdf_book: default
-bibliography: [book.bib, packages.bib]
+bibliography:
+- book.bib
+- packages.bib
 description: |
-  Семинарские занятия по статистике
+  Семинарские занятия по статистике для анализа данных
 link-citations: yes
 github-repo: elenary/StatsForDA
 ---
@@ -18,197 +17,4 @@ github-repo: elenary/StatsForDA
 library(tidyverse)
 library(kableExtra)
 ```
-
-# Статистика и ее место в жизни
-
-## Вероятности, формулировки и выводы
-
-### Салемские ведьмы
-
-> В январе 1692 года у дочери пастора Сэмюэла Пэрриса — 9-летней Элизабет Пэррис (род. 28 ноября 1682 года) и его племянницы 11-летней Эбигейл Уильямс (род. 12 июля 1680 года) появились симптомы неизвестной болезни: девочки кричали, издавали странные звуки, прятались под мебелью, а их тела принимали необычные позы. Когда Пэррис пытался читать проповедь, они затыкали уши. Местные жители начали выдвигать логичные, на их взгляд, предположения, все из которых сводились к тому, что девочки были прокляты ведьмой. Эти догадки вскоре подтвердил доктор Уильям Григгс, заявивший, что уже сталкивался с подобными случаями в Бостоне. Девочки указали на предполагаемую ведьму — девушку по имени Титуба, бывшую служанкой-рабыней в доме Пэррисов. Вскоре число заболевших девочек и девушек увеличилось. 1 марта 1692 года по их показаниям были арестованы 3 женщины: Титуба, Сара Гуд и Сара Осборн. Подозреваемые были допрошены и подвергнуты осмотру в поисках признаков, которые бы указывали на то, что они являются ведьмами. Главной «уликой» по делу женщин были показания девочек, к которым якобы являлись духи обвиняемых. Все три женщины были удобными целями для обвинений: Титуба имела нетитульную национальность, Сара Гуд была нищенкой, а Сара Осборн — одинокой тяжелобольной вдовой, вовлечённой к тому же в судебный спор с пуританами. Против них говорил тот факт, что женщины длительное время не посещали церковь. Эти показания суд счел адекватными и вынес сразу нескольким жительницам Салема смертный приговор. 
-
-```{r echo= FALSE, fig.align = 'center'}
-knitr::include_graphics("docs/salem.jpg")
-```
-
-### Суд на Салли Кларк
-
->В 1998 году, в Англии, состоялось громкое судебное разбирательство — английский адвокат Салли Кларк (Sally Clark; 1964 – 15 марта 2007) была осуждена за убийство двух своих новорожденных сыновей. Ее первый сын Кристофер умер в декабре 1996 года, через 11 недель после рождения, а второй сын Гарри умер при аналогичных обстоятельствах в январе 1998 года, спустя 8 недель после рождения. Месяц спустя Кларк была арестована. Защита утверждала, что оба ребенка умерли в результате СВДС (синдромом внезапной детской смерти), но обвинение настаивало, что их убила Кларк. Обвинение привлекло профессионального эксперта, авторитетного профессора педиатрии сэра Роя Медоу, который заявил, что поскольку вероятность внезапной смерти ребенка составляет 1/8543, то шанс двух смертей от СВДС в одной семье равен 1/8543 * 1/8543, то есть 1 : 73 000 000. В то время количество рождений в Англии, Уэльсе и Шотландии составляло 700 000 в год, поэтому вероятность случайного возникновения этого события составляла 1 каждые 100 лет. Салли Кларк признали виновной. Честерский суд приговорил ее к пожизненному заключению восемью голосами за и двумя против. В 1999 году она была заключена в тюрьму, но в январе 2003-го приговор отменили.
-
-```{r echo= FALSE, fig.align = 'center', out.width="80%"}
-knitr::include_graphics("docs/klark-95cl.jpg")
-```
-
-Статистика нужна для того, чтобы делать *выводы* о происходящем в окружающем мире.
-
-Часто выводы возможны не для абсолютного большинства случаев, а на каком-то временном интервале или для определенной группы людей. Эти может кажется нюансами, но эти ограничения очень важны, потому что, по сути, они защищают нас от вранья. 
-
-Обратите внимание на формулировки: "большинство людей, живущих в стране...", "чаще всего люди с таким признаком...", "наиболее вероятно, что...". Они крайне полезны и помогают нам не сделать откровенно неверный вывод: чаще всего мы ничего не можем сказать об абсолбтно всех людях на планете *(но есть некоторая вероятность, что можем)*
-
->Цифры обманчивы, особенно когда я сам ими занимаюсь; по этому поводу справедливо высказывание, приписываемое Дизраэли: «Существует три вида лжи: ложь, наглая ложь и статистика».
-> `r tufte::quote_footer('--- "Марк Твен, 5 июля 1907')`
-
-
-##  Определение статистики
-
-> Статистика — это набор математических процедур, которые необходимы для организации, обобщения и интерпретации информации.
-> `r tufte::quote_footer('--- Онлайн-курс по статистике')`
-
-> Стати́стика — отрасль знаний, наука, в которой излагаются общие вопросы сбора, измерения, мониторинга, анализа массовых статистических (количественных или качественных) данных и их сравнение; изучение количественной стороны массовых общественных явлений в числовой форме
-> `r tufte::quote_footer('--- Википедия / Малая советская энциклопедия')`
-
-> "Статистика – это раздел математики, изучающий описание наблюдаемых (на-пример в экспериментах) данных с помощью набора обобщенных параметров (таких как среднее значение) и ищущая закономерности связи между исходными данными и этими параметрами".
-> `r tufte::quote_footer('--- Книга "Статистика в рисунках"')`
-
-> Статистика – набор обобщенных вычисляемых характеристик, полученных при обработке параметров данных, которые являются объектом анализа. Слово используется также и в смысле раздела математики или отдельной науки – математической статистики.
-> `r tufte::quote_footer('--- Книга "Статистика в рисунках"')`
-
-> Статистика – или математическая статистика, раздел математики, в которой систематизированы методы определения особенностей совокупностей, которые являются объектами исследования, и включающая описательную статистику и статистический вывод.
-> `r tufte::quote_footer('--- Книга "Статистика в рисунках')`
-
-###  Применение статистики
-
-Вопрос, в которых точно не обходится без статистики:
-
-* Сколько человек живут у нас в стране?
-* Дадут ли мне кредит?
-* Сколько денег платить сотрудникам? А если сотрудник работает уже 5 лет? А 10?
-* Что, прости господи, происходит с коронавирусом?
-* Если я провела исследование, как понять, можно ли верить его результатам?
-
-**Можно выделить несколько самых выжных задач статистики:**
-
-* Описать существующую реальность
-* Выявить закономерности: связи неких событий между собой или причины событий
-* Предсказать и оценить вероятность наступления какого-либо события
-
-##  Виды статистики
-
-Представим, что мы провели исследование, например, о влиянии кофеина на внимание или использования нового инструмента рабочей коммуникации на продуктивность сотрудников. Прежде, чем делать вывод о том, как кофеин повлиял на способность сохранять внимание или о том, что новый инструмент повысил продуктивность сотрудников, нам хорошо бы сначала понять, что за данные у нас, можно ли им доверять? Как в целом они себя ведут, получились непрерывные значения, или там есть какие-то провалы? Каковы максимальные и минимальные значения, они соотноосятся с нашими представлениями о реальности? А какие самые встречающиеся? Какова вообще встречаемость разных значений? Ответы на эти вопросы позволяют нам поисследовать полученные данные и на начальном этапе проверить, не допустили ли мы какой-либо ошибки в данных, и первично оценить наши шансы на проверку предположения.
-
-Такое описание данных называется **описательной статистикой (descipritve stats)**, потому что, как уже понятно из названия, описывает наши данные. Здесь мы можем получить сведения о характере данных, "пощупать" их, понять что-то -- но не делаем выводы относительного того, *влияет ли на эти данные какой-либо параметр или связано ли изменение данных с каким-либо параметром.*
-```{r echo = FALSE, out.width="100%"}
-DiagrammeR::grViz("
-digraph {
-  graph []
-  node [shape = plaintext, fontsize = 10]
-    A [label = 'Статистика']
-    B [label = 'Описательная статистика']
-    C [label = 'Статистика вывода']
-  edge []
-    A->B
-    A->C
-}
-")
-```
-После того, как мы поисследовали данные и признали их адекватными и пригодными для работы, мы можем использовать их для выводов относительно выдвинутых предположений. Что там все-таки прооисходит с кофеином, он увеличил способность концентрироваться и сохранять внимание, или, наоборот, ухудшил? А с введением нового способа коммуникации между сотрудниками, стали ли они после этого делать больше задач, или все осталось на прежнем уровне? Чтобы ответить на эти вопросы, нам нужно *сравнить данные и оценить различия между ними*. Этим занимается другой раздел статистики -- **статистикой вывода (inferential stats)**. Здесь уже мы не занимаемся описанием данных, а непосредственно делаем выводы их них, о связи переменных между собой или о влиянии одной переменной на другую. Например, если мы правильно провели статистический анализ *(а это не такая тривиальная задача -- спойлер, большинство выводов, которые делаются на основании данных, ложные)*, то сможем заключить, что пить много кофе может, наоборот, негативно влиять на внимание, а использовать новый инструмент, где писать сообщения просто, быстро, и можно добавлять разные эмодзи -- способствует увеличению сделанных сотрудниками задач. И можем даже предсказать, насколько больше задач будут делаться в таком случае.
-
-
-
-
-# Выборка
-
-<!-- Допустим, нас есть какое-то предположение о связи неких психологических конструктов относительно того, как работает психика у людей. Например, о том, что кофеин как-то влияет на такой конструкт, как внимание -- это наша **теоретическая гипотеза**. Чтобы ее проверить, нам нужно провести исследование и уточнить гипотезу на языке этого исследования, сделать ее более конкретной. Например, мы решили провести эксперимент, в котором экспериментальная группа пила 3 кружки кофе в первой половине дня, а контрольная группа пила декофеинизированный кофе. Далее мы делали несколько замеров решения какого-нибудь когнитивного теста на внимание во второй половине дня и смотрели, сколько ошибок допускают экспериментальной и контрольной выборок. десь мы уточнили. И когда мы делаем выводы, мы говорим не о нашей небольшой группе людей, которых мы исследовали – а о всей популяции людей, она называется **генеральной совокупностью**. Почему так можно? -->
-
-Мы рассмотрели два примера -- о влиянии кофеина на внимание и коммуникационного рабочего инструмента на продуктивность. В этих примерах мы предположили, что провели исследование -- то есть набрали какое-то количество человек и сделали вывод, как в целом это работает у людей. Почему так происходит? Почему мы можем сделать вывод о всех людях, которые пьют кофе или пользуются этим инструментом? И зачем нам вообще это нужно?
-
-<p align="center">
-```{r echo= FALSE, fig.align = 'center', out.width="80%"}
-knitr::include_graphics("docs/sample.png")
-```
-*Изображение с https://towardsdatascience.com/*
-</p>
-
-## Выборочные оценки
-
-Как мы можем сделать вывод о всех людях в целом? Если мы хотим узнать средний рост людей на всей планете, будем ли мы измерять каждого человека и брать среднее арифметическое?
-
-
-<p align="center">
-```{r echo= FALSE, fig.align = 'center', out.width="100%"}
-knitr::include_graphics("docs/height_distribution.png")
-```
-https://ourworldindata.org/human-height 
-</p>
-
-
-**Генеральная совокупность** -- множество (или совокупность) всех изучаемых объектов в рамках определенного исследовательского вопроса.
-
-**Выборка** или **выборочная совокупность** -- часть генеральной совокупности, отобранная для изучения определенного исследовательского вопроса.
-
-Когда мы говорим о генеральной совокупности, мы говорим о ее **параметрах**, например, средний рост людей, обозначим его **X**. Мы не можем посчитать его напрямую, поэтому нам приходится прибегать к **выборочным оценкам**, которые часто обозначются той же буквой, что и параметр генеральной совокупности, только "с крышечкой" или "с чертой" **X̅** -- выборочное среднее, средний рост людей на конкретной выборке.
-
-.        | Генеральная совокупность | Выборка |
--------- | ------------------------ | ------- |
-Размер   |               N          |    n    |
-Параметр |               X          |    X    |
-
-Итак, когда мы хотим сделать вывод о всех людях из генеральной совокупности -- мы проводим исследование на небольшой выборке (в зависимости от метоода исследования необходимый размер выборки может быть от 10 до 1000 чловек) и оцениваем исследуемый параметр генеральной совокупности по выборочным оценкам. 
-
-
-## Репрезентативность выборки
-
-Важным понятием является  **репрезентативность выборки** -- способность выборки отражать исследуемый параметр генеральной совокупности. 
-
-*Одна и та же выборка может быть репрезентативной для одного исследовательского вопроса и не репрезентативной для другого!*
-
-Репрезентативность достигается:
-
-* **Случайным выбором людей** (берем не каких-то конкретных, которые нам больше нравятся, а случайным образом)
-* **Объемом выборки** (доказано, что при большом объеме выборки она достаточно представляет генеральную совокупность, чтобы дать ответ об исследуемом параметре)
-
-**Способы формирования репрезентативных выборок**
-
-*  Простая случайная выборка (simple random samplle)
-*  Систематическая выборка (systematic sample)
-*  Кластерная выборка (cluster sample)
-*  Стратифицированная выборка (stratified sample)
-
-
-**Кейс**
-
-> Некий Никита провел исследование, где они изучал взаимосвязь возраста, преподавательского стажа и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита нашел по 10 преподавателей департаметов психологии из каждого вуза в социальной сети ВКонтакте и предлагал им заполнить опросник выгорания Маслач (Maslach Burnout Inventory, MBI). На основании обработанных данных Никита сделал следующие выводы: 1) в России чаще выгорают преподаватели более молодого возраста; 2) чаще выгорают преподаватели с меньшим преподавательским стажем; 3) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?
-
-```{r echo= FALSE, fig.align = 'center', out.width="80%"}
-knitr::include_graphics("docs/2022-09-13 09.30.13.jpg")
-```
-
-# Данные и типы шкал
-
-Что значит измерить что-либо? Это значит, **привести в соответствие исследуемому параметру какое-либо значение на шкале**.
-
-**Шкала** -- это система измерения. Для того, чтобы мы все могли пользоваться одинаковыми единицами измерениями и не сходили с ума, мы, люди планеты Земля, пользуемся едиными шкалами. Всего их 4, и они бывают метрические и неметрические -- то есть, можем ли мы приложить измерительную линейку к ним или нет. Данные, измеренные метрическими шкалами -- количественные данные.
-
-
-## Количественные и неколичественные данные
-
-## Непрерывные и дискретные данные
-
-## Типы шкал данных
-
-Шкала | Описание                                       | Возможные операции | Примеры              | 
-------| -----------------------------------------------| ------------------ | -------------------- | 
-**Наименований (номинальная)** | Качественная (категориальная), нельзя установить "больше" или "меньше" | =, $\neq$ | shcool, sex, address, famsize, Mjob, Fjob, schoolsup | 
-**Порядка (ранговая)**         | Качественная (категориальная), можно установить "больше" или "меньше", но нельзя посчитать количественно, на сколько больше или меньше | =, $\neq$, >, < | Medu, Fedu, traveltime, studytime, famrel, freetime, goout, Dalc, Walc, health | 
-**Разности (интервальная)**    | Количественная, но нет абсоолютного нуля, можно посчитать  *на сколько* больше или меньше, но нельзя посчитать, *во сколько раз* | =, $\neq$, >, <, +, - | G *(отнесу сюда, так как с оценками все сложно)*  | 
-**Отношений (абсолютная)**     | Количественная, есть абсолютный ноль, можно посчитать и *на сколько* больше или меньше, и *во сколько раз* | =, $\neq$, >, <, +, -, ×, ÷ | age, failures, absences | 
-
-
-
-```{r, eval=TRUE, message = FALSE}
-library(tidyverse)
-teacher <- seq(1,30,1)
-age <-  rep(c(27, 30, 32, 26, 27, 41),5)
-exp <- rep(c("от 1 до 2", "от 1 до 2", "от 3 до 5", "от 3 до 5", "от 1 до 2", "больше 5"),5)
-univer <-  rep(c("MSU", "HSE", "MSU", "RANEPA", "HSE", "RANEPA"),5)
-
-burnout <- tibble(teacher, age, exp, univer)
-
-kable(burnout) %>% scroll_box(width = "100%")
-```
-
-
-<!--chapter:end:index.Rmd-->
-
-
 
