--- a/04-random_variable.Rmd
+++ b/04-random_variable.Rmd
@@ -1,7 +1,109 @@
-# Случайные величины 
+# Распределения и случайные величины 
+
+## Случайная величина
+
+Мы немного поговорили про переменные, они же -- признаки исследуего нами объекта (рост, вес, пол, уровень образования и так далее). Поговорили, что чтобы измерить признак, нужно привести в соответствие какое-либо значение из шкалы. Теперь давайте посмотрим на математический смысл переменных и их значений.
+
+С математической точки зрения значения переменных являются **случайными величинами**. В теории вероятностей случайной величиной называется величина, которая *в данный момент времени (момент измерения) может принимать только одно значение, определенное стечением случайных обстоятельств,  которое нельзя предугадать точно*.
+
+Нам нужно замерить рост? Можем ли мы заранее сказать, сколько точно вплоть до микрометров он будет составлять? Влияют ли на него прямо сейчас какие-то факторы? Если нет, значит, мы провели **испытание** (статистический термин единичного исследования или измерения), в ходе которого случайная величина рост приняла определенное значение (мы привели ей в соответствие какое-то значение из количественной шкалы). Говоря статистическим языком, наступило **событие** "РОСТ = 178 см".
+
+Нужно определить время реакции после выпитой кружки кофе? Все то же самое, время реакции -- случайная величина.
+
+Результат прохождения опросника -- случайная величина.
+
+Название ВУЗа, из которого пришел наш испытуемый -- случайная величина.
+
+Это понятие нужно нам для того, чтобы мы могли считать **вероятности** наступления определенных **событий**, то есть наших измеренных переменных. Дело в том, что про вероятности случайных величин нам плюс-минус понятно и просто, а вот если величина перестает быть случайной, расчет вероятности становится сложнее. И мы пока рассматриваем только случайные величины.
+
+## Вероятность
+
+Что такое вероятность?
+
+Есть разные определения, в рамках статистики различают статистическое и геометрическое определение вероятностей. Можно углубиться на http://mathprofi.ru/sluchainaya_velichina.html Пока воспользуемся статистическим определением, не углубляясь в статистические термины: если при проведении испытания возможны $n$ равновероятных исходов значений случайной величины $A$, при этом в $m$ из них случается интересующее нас конкретное событие $A_{i}$,то *вероятность наступления события* $P(A_{i}) = \frac{m}{n}$ 
+
+Самая часто используемая в теории вероятностей модель -- бросание игрального кубика. 
+
+```{r echo= FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/kubik.jpg")
+```
+<p align="center"> </p>
+
+Бросание игрального кубика -- это *испытание*, выпадение одной из граний -- *исход*, а выпадение конкретно шестерки -- *событие*.
+
+Обозначим выпадние грани в результате бросания кубика буквой $K$. Чему равна вероятность выпадения каждой грани $K_{1}$, $K_{2}$, $K_{3}$, $K_{4}$, $K_{5}$, $K_{6}$?
+
+По статистическому определению вероятности: возможных исходов всего -- 6, интересующее нас событие случается в одном случае из 6, то есть:
+$P(K_{1})$ = $P(K_{2})$ = $P(K_{3})$ = $P(K_{4})$ = $P(K_{5})$ = $P(K_{6})$ = $\frac{1}{6}$
+
+А чему равна **полная** вероятность?
+
+Как можно вывести это математически из вероятностей наступления событий в бросании игрального кубика?
+
+
+Важно, что все события *равновероятно*. Если бы мы жили в мире с кубиками со смещенным центром тяжести, выпадние граней не было бы равновероятным. 
+
+
+- геом смысл и вероятность непрерывной величины??
+
+
+
+Запомнили, что мы рассматриваем признаки (переменные) как случайные величины
+
+## Частоты и плотность вероятности
+
+Здесь начинается неожиданная развилка: в зависимости от того, как мы понимаем вероятность, статистика делится на байесовскую и частотную (фреквинтистскую, frequentist). Статистика, которую мы сейчас обсуждаем, называется фреквентистской (частотной) https://en.wikipedia.org/wiki/Frequentist_inference
+
+**Закон распределения дискретной случайной величины** – это соответствие между возможными значениями этой величины и их вероятностями
+
+С непрерывными величинами чуть посложнее
+
+
+
+```{r}
+kable(burnout)
+```
+
+
+## Распределения
+
+
+
+Посмотреть и ужаснуться можно тут http://www.math.wm.edu/~leemis/chart/UDR/UDR.html. Нам, к счастью, ничего из этого не понадобится
+
+
+### Нормальное распределение
+
+### Другие распределения
+
+Биномиальное распределение
+
+$P(k | n, p) = \frac{n!}{k!(n-k)!} \times p^k \times (1-p)^{n-k} =  {n \choose k} \times p^k \times (1-p)^{n-k}$
+
+```{r}
+tibble(x = 0:50,
+           density = dbinom(x = x, size = 50, prob = 0.16)) %>% 
+  ggplot(aes(x, density))+
+  geom_point()+
+  geom_line()+
+  labs(title = "Биномиальное распределение p = 0.16, n = 50") +
+  theme_minimal()
+```
+
+Экспоненциальное распределение
+
+$ P(x)= \lambda \times e^{-\lambda x}$
+
+```{r}
+tibble(x = 1:20,
+           PDF = dexp(x = x, rate = 0.5)) %>% 
+  ggplot(aes(x, PDF))+
+  geom_point()+
+  geom_line()+
+  labs(title = "PDF экспоненциального распредления с коэффициентом и
+```
 
 
 
 
 
-# Распределения
